--- a/research-proposal/intro.tex
+++ b/research-proposal/intro.tex
@@ -1,2 +1,14 @@
 \section{Introduction}
-    What is the problem you plan to address? Why is it important to solve?
+    \textbf{What is the problem you plan to address?}
+    \newline
+    \newline
+    Federated Learning involves training a shared global model using local data and compute on various user devices.
+    Several approaches have been proposed to implement this paradigm starting with Federated Averaging (1).
+    However, not many of these approaches consider low-end devices that are unable to perform training. 
+    This has implications for fairness due to introduction of systematic bias, in addition to degradation in model accuracy.
+    Recent works such as FedProx (2) and Hassas (3) have attempted to include slow devices by incorporating partial work and serving a subset model according to device characteristics, respectively. 
+    These approaches have been evaluated on large-scale simulations using LEAF Benchmark (4) and a small-scale testbed of mobile devices in case of Hassas.
+    To the best of our knowledge, none of these works have been evaluated on mid-scale federated learning systems using actual mobile devices with a sufficiently large number of clients.
+    \newline
+    \newline
+    \textbf{Why is it important to solve?}
