--- a/research-proposal/paper.tex
+++ b/research-proposal/paper.tex
@@ -15,7 +15,7 @@
 
 % make title bold and 14 pt font (Latex default is non-bold, 16 pt)
 \title{Research Proposal}
-\author{Muhammad Taha}
+\author{Mohammad Maaz Owais, Muhammad Hamza Khawaja, Muhammad Taha, Shazer Ali}
 
 \maketitle
 
