add pointers for related work

--- a/research-proposal/related_work.tex
+++ b/research-proposal/related_work.tex
@@ -1,2 +1,5 @@
 \section{Related Work}
-    What are the most related works? (analyze prior works and cite related papers)
+    \textbf{What are the most related works? (analyze prior works and cite related papers)}
+    LEAF, FLOWER
+    Discuss approaches like FedProx, FedAdaptive, etc. and emphasize how these have only been evaluated on LEAF.
+    Discuss any papers which evaluated on a testbed.
