--- a/research-proposal/approach.tex
+++ b/research-proposal/approach.tex
@@ -1,2 +1,23 @@
 \section{Approach}
     What is your proposal and how does it differ from prior work?
+
+    \subsection{Application Layer - client only}
+    \subsection{FL Platform Layer - client, server}
+        \begin{enumerate}
+            \item \textbf{FL Runtime} \newline
+            \item \textbf{Device Analytics} \newline
+                No personally identifiable information will be logged. \newline
+                \begin{itemize}
+                    \item Logs
+                    \item Device OS
+                    \item Device Model
+                    \item Device State
+                    \item Training time
+                    \item Memory profile
+                \end{itemize}
+        \end{enumerate}
+    \subsection{Coordination Layer - server only}
+        \begin{enumerate}
+            \item Device Selection Algorithm \newline
+            \item Job Scheduler
+        \end{enumerate}
