--- a/research-proposal/paper.tex
+++ b/research-proposal/paper.tex
@@ -25,14 +25,9 @@
 \input{methods}
 \input{work_division}
 
-% \newpage
-% \input{technique}
-% \input{bug_category}
-% \input{bug_analysis}
+\newpage
 
 \bibliographystyle{acm}
-% \bibliography{ref,sieve_ref}
+\bibliography{ref}
 
-% ref.bib is a copy of ref_hotos.bib with more references
-% \bibliography{ref_hotos,ref,sieve_ref}
 \end{document}
