--- a/research-proposal/related_work.tex
+++ b/research-proposal/related_work.tex
@@ -1,5 +1,15 @@
 \section{Related Work}
     \textbf{What are the most related works? (analyze prior works and cite related papers)}
-    LEAF, FLOWER
-    Discuss approaches like FedProx, FedAdaptive, etc. and emphasize how these have only been evaluated on LEAF.
-    Discuss any papers which evaluated on a testbed.
+    In recent times, there have been several studies done on the algorithms and frameworks to study federated learning. Some of these include: //
+
+    \textbf{FedProx}: An optimized version of the Federated Average algorithm that is more robust than the original, especially in the case of highly heterogenous settings.
+
+    \textbf{FedAdaptive}: This work presents federated versions of adaptive optimizers such as Adam and Adagrad. The use of these can highly improve performance of federated learning
+
+    \textbf{Flower}: a highly developed framework that can support millions of clients using just a few high end GPus.
+
+    A recent paper in 2022 \textbf{“An Experiment Study on Federated Learning Testbed”} performance of federated learning on IOT devices and serves as a place to start when developing federated learning frameworks.
+
+    However, these have only ever been evaluated using LEAF, the benchmark framework for these settings, and is yet to be deployed and analyzed using user data.
+
+
