--- a/research-proposal/related_work.tex
+++ b/research-proposal/related_work.tex
@@ -10,6 +10,8 @@
 
     A recent paper in 2022 \textbf{“An Experiment Study on Federated Learning Testbed”} performance of federated learning on IOT devices and serves as a place to start when developing federated learning frameworks.\\
 
+    Similarly in 2020 in the paper \textbf{"Optimize Scheduling of Federated Learning on Battery-powered Mobile Devices"}, a testbed of 4 devices with various CPU cores and processing capabilities was used to optimize federated learnign models, using the MNIST data set.\\
+
     However, these have only ever been evaluated using LEAF, the benchmark framework for these settings, and is yet to be deployed and analyzed using user data.
 
 
