--- a/research-proposal/design.tex
+++ b/research-proposal/design.tex
@@ -28,8 +28,6 @@
 
         \end{enumerate}
     \subsection{Coordination Layer - server only}
-        \begin{enumerate}
-            \item Device Selection
-            \item Job Management
-            \item Failure Detection
-        \end{enumerate}
+        \subsubsection{Device Management}:
+        
+            The selection and reporting of devices for FL tasks are part of device management. In order to make the device management process inclusive, we add functionality to the mechanism described in the paper Towards Federated Learning At Scale: System Design. Devices that meet the eligibility requirements check in with the server for any FL tasks that are open as part of the selection process. After allocating the FL tasks to available devices, the server waits for participants to report updates. To signal the end of a round, the server uses a goal counter and timer. The goal count is split into two quorums, one for high-end devices and the other for low-end devices, both of equal size. The round is marked complete if the goal count is achieved within the timeout value else the round is discarded.
