--- a/research-proposal/ref.bib
+++ b/research-proposal/ref.bib
@@ -34,3 +34,31 @@
   biburl    = {https://dblp.org/rec/journals/corr/abs-1812-01097.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{10.1145/3446382.3448652,
+author = {Naseer, Usama and Benson, Theophilus A. and Netravali, Ravi},
+title = {WebMedic: Disentangling the Memory-Functionality Tension for the Next Billion Mobile Web Users},
+year = {2021},
+isbn = {9781450383233},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3446382.3448652},
+doi = {10.1145/3446382.3448652},
+abstract = {Users in developing regions still suffer from poor web performance, mainly due to their unique landscape of low-end devices. In this paper, we uncover a root cause of this suboptimal performance by cross-analyzing longitudinal resource (in particular, memory) profiles from a large social network, and the memory consumption of modern webpages in five regions. We discover that the primary culprit for hitting memory constraints is JavaScript execution which existing optimizations are ill-suited to alleviate. To handle this, we propose WebMedic, an approach that trades-off less critical functionality of a webpage to directly address memory and performance problems.},
+booktitle = {Proceedings of the 22nd International Workshop on Mobile Computing Systems and Applications},
+pages = {71–77},
+numpages = {7},
+keywords = {Mobile web, Memory performance, Web optimizations},
+location = {Virtual, United Kingdom},
+series = {HotMobile '21}
+}
+
+@INPROCEEDINGS{9225395,
+  author={Vamsi, G Krishna and Rasool, Akhtar and Hajela, Gaurav},
+  booktitle={2020 11th International Conference on Computing, Communication and Networking Technologies (ICCCNT)}, 
+  title={Chatbot: A Deep Neural Network Based Human to Machine Conversation Model}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={1-7},
+  doi={10.1109/ICCCNT49239.2020.9225395}}
