--- a/research-proposal/related_work.tex
+++ b/research-proposal/related_work.tex
@@ -1,17 +1,5 @@
 \section{Related Work}
-    \textbf{What are the most related works? (analyze prior works and cite related papers)}
-    In recent times, there have been several studies done on the algorithms and frameworks to study federated learning. Some of these include:\\
+    In recent times, there have been several studies done on the algorithms and frameworks to study federated learning. \textbf{FedProx} is an optimized version of the Federated Average algorithm that is more robust than the original, especially in case of highly heterogenous settings. \textbf{FedAdaptive} presents federated versions of adaptive optimizers such as Adam and Adagrad. These advances in the FL framework have mostly leveraged the \textbf{LEAF} simulation framework. Few works have performed evaluations on real-world devices. A recent paper in 2022 \textbf{“An Experiment Study on Federated Learning Testbed”} performance of federated learning on IOT devices is an example in that direction. Similarly, the paper \textbf{"Optimize Scheduling of Federated Learning on Battery-powered Mobile Devices"} utilized a testbed of 4 devices with varying CPU cores and processing capabilities to to evaluate their approach using the MNIST dataset. To facilitate experiments on real devices, \textbf{Flower} a highly developed framework has been introduced that can support millions of real world clients using just a few high end GPUs.
 
-    \textbf{FedProx}: An optimized version of the Federated Average algorithm that is more robust than the original, especially in the case of highly heterogenous settings. \\
-
-    \textbf{FedAdaptive}: This work presents federated versions of adaptive optimizers such as Adam and Adagrad. The use of these can highly improve performance of federated learning.\\
-
-    \textbf{Flower}: a highly developed framework that can support millions of clients using just a few high end GPUs.\\
-
-    A recent paper in 2022 \textbf{“An Experiment Study on Federated Learning Testbed”} performance of federated learning on IOT devices and serves as a place to start when developing federated learning frameworks.\\
-
-    Similarly in 2020 in the paper \textbf{"Optimize Scheduling of Federated Learning on Battery-powered Mobile Devices"}, a testbed of 4 devices with various CPU cores and processing capabilities was used to optimize federated learnign models, using the MNIST data set.\\
-
-    However, these have only ever been evaluated using LEAF, the benchmark framework for these settings, and is yet to be deployed and analyzed using user data.
-
-
+% reference deployed FL applications
+% papers evaluated on testbed of real devices
