--- a/research-proposal/methods.tex
+++ b/research-proposal/methods.tex
@@ -17,6 +17,9 @@
     \subsection{Phase III}
     Finally, we will make an effort to scale our application to 100+ users.
 
+    \begin{table}[t]
+        
+    \end{table}
 
 % - FL Platform
 %     - FL Runtime
