--- a/research-proposal/ref.bib
+++ b/research-proposal/ref.bib
@@ -62,3 +62,22 @@ series = {HotMobile '21}
   number={},
   pages={1-7},
   doi={10.1109/ICCCNT49239.2020.9225395}}
+
+@article{DBLP:journals/corr/abs-1812-06127,
+  author    = {Anit Kumar Sahu and
+               Tian Li and
+               Maziar Sanjabi and
+               Manzil Zaheer and
+               Ameet Talwalkar and
+               Virginia Smith},
+  title     = {On the Convergence of Federated Optimization in Heterogeneous Networks},
+  journal   = {CoRR},
+  volume    = {abs/1812.06127},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1812.06127},
+  eprinttype = {arXiv},
+  eprint    = {1812.06127},
+  timestamp = {Wed, 23 Dec 2020 09:35:18 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1812-06127.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
