--- a/research-proposal/ref.bib
+++ b/research-proposal/ref.bib
@@ -176,3 +176,15 @@ series = {MobiCom '21}
   pages={212-221},
   doi={10.1109/IPDPS47924.2020.00031}
 }
+
+@article{DBLP:journals/corr/abs-1909-12326,
+  author    = {Yuang Jiang and
+               Shiqiang Wang and
+               Bong Jun Ko and
+               Wei{-}Han Lee and
+               Leandros Tassiulas},
+  title     = {Model Pruning Enables Efficient Federated Learning on Edge Devices},
+  journal   = {CoRR},
+  volume    = {abs/1909.12326},
+  year      = {2019}
+}
