--- a/research-proposal/intro.tex
+++ b/research-proposal/intro.tex
@@ -7,4 +7,4 @@
     These approaches have mostly been evaluated on simulations using LEAF Benchmark~\cite{DBLP:journals/corr/abs-1812-01097}.
     To the best of our knowledge, none of these works have been evaluated on federated learning systems using real-world devices with a sufficiently large number of users. \newline
 
-    To this end, we propose the development of a federated learning system that supports atleast 100 real-world users. We aim to achieve this by building a robust FL system and deploying a suitable application on top of it. In general, the application will leverage a machine learning model that benefits from collaborative learning in a privacy-preserving manner. It will provide the user with an attractive incentive and will leverage the data, generated through the user's interaction with the application, for model training. Therefore, this will provide a conducive platform to concretely evaluate the robustness of Hassas as well as other FL frameworks. Conducting experiments on real-world data in the face of dynamic changes in systems heterogeneity, including state changes, will provide valuable insights that will benefit the community.
+    To this end, we propose the development of a federated learning system that includes 100+ active real-world users. We aim to achieve this by building a robust FL system and deploying a suitable application on top of it. In general, the application will leverage a machine learning model that benefits from collaborative learning in a privacy-preserving manner. It will provide the user with an attractive incentive and will leverage the data, generated through the user's interaction with the application, for model training. Therefore, this will provide a conducive platform to concretely evaluate the robustness of Hassas as well as other FL frameworks. Conducting experiments on real-world data in the face of dynamic changes in systems heterogeneity, including state changes, will provide valuable insights that will benefit the community.
