--- a/research-proposal/methods.tex
+++ b/research-proposal/methods.tex
@@ -1,4 +1,4 @@
-\section{Methods}
+\section{Approach}
     The tasks we need to accomplish can be broadly categorized as follows. \newline
 
     \begin{enumerate}
