--- a/research-proposal/ref.bib
+++ b/research-proposal/ref.bib
@@ -188,3 +188,24 @@ series = {MobiCom '21}
   volume    = {abs/1909.12326},
   year      = {2019}
 }
+
+@article{DBLP:journals/corr/abs-1902-01046,
+  author    = {Kallista A. Bonawitz and
+               Hubert Eichner and
+               Wolfgang Grieskamp and
+               Dzmitry Huba and
+               Alex Ingerman and
+               Vladimir Ivanov and
+               Chlo{\'{e}} Kiddon and
+               Jakub Kone{\v{c}}n{\'y} and
+               Stefano Mazzocchi and
+               H. Brendan McMahan and
+               Timon Van Overveldt and
+               David Petrou and
+               Daniel Ramage and
+               Jason Roselander},
+  title     = {Towards Federated Learning at Scale: System Design},
+  journal   = {CoRR},
+  volume    = {abs/1902.01046},
+  year      = {2019}
+}
