--- a/research-proposal/related_work.tex
+++ b/research-proposal/related_work.tex
@@ -1,5 +1,5 @@
 \section{Related Work}
-    \textbf{HeteroFL} challenges the assumption that local models must have the same architecture as the global model.~\cite{DBLP:journals/corr/abs-2010-01264} On the other hand, \textbf{FedDST} proposes approaches to make on-device computation and in-network communication more efficient.~\cite{DBLP:journals/corr/abs-2112-09824} \textbf{FedProx} incorporates partial work to include low-end devices~\cite{DBLP:journals/corr/abs-1812-06127}. However, these frameworks mostly leverage the \textbf{LEAF} benchmark for experimentation.~\cite{DBLP:journals/corr/abs-1812-01097} In addition,~\cite{232971} aims to demonstrate the impact of straggler devices by measuring the impact of cpu resource heterogeneity on training time. The evaluation is conducted using an emulated environment with clients running in Docker containers deployed on a AWS EC2 Virtual Machine instance. The following FL approches perform evaluations using small-scale testbeds of real-world devices. \textbf{PruneFL} uses a set of Raspberry Pi devices connected to a central server (PC) and a simulated setting.~\cite{DBLP:journals/corr/abs-1909-12326} Time measurements from Raspberry Pi devices are used for experiments conducted on the simulated setting. \textbf{Hermes} leverages structured pruning to find a small subnetwork for each device and aggregating across overlapping parameters to learn a structured sparse deep neural network.~\cite{10.1145/3447993.3483278} The framework is evaluated on a testbed of 3 Google Pixel smartphones connected to a central server. Similarly,~\cite{9139810} utilized a testbed of 4 devices with different device characteristics to to evaluate their approach using the MNIST dataset. Hence, we find few works that have performed evaluations on real-world devices.
+    \textbf{HeteroFL} challenges the assumption that local models must have the same architecture as the global model.~\cite{DBLP:journals/corr/abs-2010-01264} On the other hand, \textbf{FedDST} proposes approaches to make on-device computation and in-network communication more efficient.~\cite{DBLP:journals/corr/abs-2112-09824} \textbf{FedProx} incorporates partial work to include low-end devices~\cite{DBLP:journals/corr/abs-1812-06127}. However, these frameworks mostly leverage the \textbf{LEAF} benchmark for experimentation.~\cite{DBLP:journals/corr/abs-1812-01097} In addition,~\cite{232971} aims to demonstrate the impact of straggler devices by measuring the impact of cpu resource heterogeneity on training time. The evaluation is conducted using an emulated environment with clients running in Docker containers deployed on a AWS EC2 Virtual Machine instance. The following FL approches perform evaluations using small-scale testbeds of real-world devices. \textbf{PruneFL} uses a set of Raspberry Pi devices connected to a central server (PC) and a simulated setting.~\cite{DBLP:journals/corr/abs-1909-12326} Time measurements from Raspberry Pi devices are used for experiments conducted on the simulated setting. \textbf{Hermes} leverages structured pruning to find a small subnetwork for each device and aggregating across overlapping parameters to learn a structured sparse deep neural network.~\cite{10.1145/3447993.3483278} The framework is evaluated on a testbed of 3 Google Pixel smartphones connected to a central server. Similarly,~\cite{9139810} utilized a testbed of 4 devices with different device characteristics to evaluate their approach using the MNIST dataset. Hence, we find few works that have performed evaluations on real-world devices.
 
 % reference deployed FL applications
 % papers evaluated on testbed of real devices
