add work div + timeline

--- a/research-proposal/work_division.tex
+++ b/research-proposal/work_division.tex
@@ -1,2 +1,24 @@
 \section{Timeline and Work Division}
-    Timeline and division of work.
+\begin{table}
+    \footnotesize
+    \centering
+    \begin{tabular}{lccc}
+        \textbf{Assignment} & \textbf{Deadline}  & \textbf{Member(s) Responsible}\\
+        
+        Literature Review                       & Feb 17          & All                     \\
+        Platform Evaluation                     & Feb 20          & Taha, Hamza            \\
+        FL Platform Deployment (4 Devices)      & Feb 26          & Hamza, Taha             \\
+        FL Platform Deployment (20 Devices)     & Mar 15          & Taha, Hamza             \\
+        Mid Report                              & Mar 30          & All                     \\
+        Application Prototype                   & April 1         & Shazer, Maaz (Both Lead), Taha, Hamza            \\
+        Integration                             & April 5         & Shazer, Taha        \\
+        Testing                                 & April 5         & Maaz, Hamza         \\
+        User-base Development                   & April 15        & All                 \\
+        Baseline Evaluation                     & April 22        & Hamza, Maaz, Taha   \\
+        Final Report                            & April 27        & All \\
+    \end{tabular}
+
+    \caption{
+        {\bf Timeline and Work Division}
+    }
+\end{table}
