--- a/research-proposal/ref.bib
+++ b/research-proposal/ref.bib
@@ -209,3 +209,35 @@ series = {MobiCom '21}
   volume    = {abs/1902.01046},
   year      = {2019}
 }
+
+@article{10.1504/IJMC.2005.006583, 
+author = {Kamssu, Aurore J.}, 
+title = {Global Connectivity through Wireless Network Technology: A Possible Solution 
+for Poor Countries}, 
+year = {2005}, 
+issue_date = {December 2005}, 
+publisher = {Inderscience Publishers}, 
+address = {Geneva 15, CHE}, 
+volume = {3}, 
+number = {3}, 
+issn = {1470-949X}, 
+url = {https://doi.org/10.1504/IJMC.2005.006583}, 
+doi = {10.1504/IJMC.2005.006583}, 
+abstract = {There has always been an unequal access to technology among 
+demographically, economically, and socially diverse groups. However, mobile 
+technology seems to be defying diversity obstacles. The present study investigates the 
+factors that may contribute to the prosperity of mobile technology; especially, socio-
+economic factors, telecom infrastructures, and internet use. Statistical analyses show 
+that there is an empirical relationship between these factors and the growth of mobile 
+technology. The factors analysed reveal that, unlike other technologies, mobile 
+technology has been growing faster in economically and technologically challenged 
+nations; and therefore, mobile technology may be the best tool to overcome internet 
+connectivity problems in poor countries.}, 
+journal = {Int. J. Mob. Commun.}, 
+month = {mar}, 
+pages = {249–262}, 
+numpages = {14}, 
+keywords = {mobile communications, wireless networks, telecommunications 
+infrastructures, developing countries, global internet connectivity, socio-economic 
+factors, mobile technology} 
+}
