--- a/research-proposal/work_division.tex
+++ b/research-proposal/work_division.tex
@@ -1,17 +1,16 @@
-\section{Timeline and Work Division}
 \begin{table}
     \footnotesize
     \centering
     \begin{tabular}{lccc}
-        \textbf{Assignment} & \textbf{Deadline}  & \textbf{Member(s) Responsible}\\
+        \textbf{Assignment} & \textbf{Deadline}  & \textbf{Members Responsible}\\
         
         Literature Review                       & Feb 17          & All                     \\
-        Platform Evaluation                     & Feb 20          & Taha, Hamza            \\
-        FL Platform Deployment (4 Devices)      & Feb 26          & Hamza, Taha             \\
-        FL Platform Deployment (20 Devices)     & Mar 15          & Taha, Hamza             \\
+        Platform Evaluation                     & Feb 20          & Taha, Maaz            \\
+        FL Deployment (4 Devices)      & Feb 26          & Hamza, Taha             \\
+        FL Deployment (20 Devices)     & Mar 15          & Taha, Hamza             \\
         Mid Report                              & Mar 30          & All                     \\
-        Application Prototype                   & April 1         & Shazer, Maaz (Both Lead), Taha, Hamza            \\
-        Integration                             & April 5         & Shazer, Taha        \\
+        Application Prototype                   & April 1         & All, Shazer (Lead)            \\
+        App Integration                             & April 5         & Shazer, Taha        \\
         Testing                                 & April 5         & Maaz, Hamza         \\
         User-base Development                   & April 15        & All                 \\
         Baseline Evaluation                     & April 22        & Hamza, Maaz, Taha   \\
